# parallel_plate

./: .gitignore  CMakeLists.txt  README.md
config/: default_parallel_plate.json  pressure_scan_0p02_to_760_torr.json  smoke_parallel_plate.json
scripts/: bootstrap_garfield.sh
src/: parallel_plate_scan.cc
